--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    compile 'com.yqritc:android-scalablevideoview:1.0.4'
+
+
+
+
+
 }
