--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hinge">
-        <activity android:name=".verified"></activity>
+        <activity android:name=".name_screen"></activity>
+        <activity android:name=".verified" />
         <activity android:name=".otp_screen" />
         <activity android:name=".phone_num" />
         <activity android:name=".MainActivity">
