--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hinge">
-
-        <activity android:name=".SettingActivity"></activity>
-        <activity android:name=".verified"></activity>
+        <activity android:name=".Boost"></activity>
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".verified" />
         <activity android:name=".otp_screen" />
         <activity android:name=".phone_num" />
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
