--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     compile 'com.yqritc:android-scalablevideoview:1.0.4'
-
+    implementation 'com.github.swapnil1104:OtpEditText:1.0.2-rc'
 
 
 
