"Learn_more_screen"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hinge">
-        <activity android:name=".Matches_Activity"></activity>
+        <activity android:name=".Learn_more_Activity"></activity>
+        <activity android:name=".Matches_Activity" />
         <activity android:name=".Roses_activity" />
         <activity android:name=".Like_you_Activity" />
         <activity android:name=".DOB" />
