--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hinge">
+        <activity android:name=".userDetailsActivity"></activity>
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".ethnicity" />
 
         <activity android:name=".highest_level"></activity>
         <activity android:name=".ethnicity" />
